--- a/mission.html
+++ b/mission.html
@@ -26,7 +26,7 @@
 
       <main class="mission-page">
         <h1>Our Mission</h1>
-        <div class="content-row reverse">
+        <div class="content-row">
           <div class="text-block">
             <p>Be weird with us</p>
             <p>More text to fill the space and explain your mission or content.</p>
